--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
-    background-image: url("img/acqua.png");
+    /*background-image: linear-gradient(45deg, red, blue);*/
+    font-size: 30px;
 }
 
 p {
@@ -92,3 +93,15 @@ a:hover {
 #p6 {
     color: white;
 }
+
+.container_square{
+    width: 400px;
+    height: 400px;
+}
+
+.square_1 {
+    width: 50%;
+    height: 50%;
+    background-color: red;
+}
+
