--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ ul li {
     display: inline-block;
 }
 
-p span {
+/*p span {
     border: 3px;
     background-color: blue;
     width: 5px;
@@ -156,4 +156,8 @@ p span.inline-block {
 
 p span.block {
     display: block;
+}*/
+
+ div p.vanish {
+    display: none;
 }
