--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-* {
+/* {
     /*background-image: linear-gradient(45deg, red, blue);*/
     /*font-size: 30px;*/
-}
+
 
 /*p {
     color: aqua;
@@ -15,7 +15,7 @@ h1 {
 
 h2 {
     color: red;
-}*/
+}
 
 h3 {
     color: yellow;
@@ -53,7 +53,7 @@ h6 {
     text-shadow: 2px 2px red;
 }
 
-/*p,*/ h1, button {
+p, h1, button {
     text-align: center;
 }
 
@@ -164,7 +164,7 @@ p span.inline-block {
 
 p span.block {
     display: block;
-}*/
+}
 
  div p.vanish {
     display: none;
@@ -191,11 +191,17 @@ div.three_columns #middle {
 div.three_columns #right {
     float: left;
     width: 33%;
-}
-
-footer {
+}footer {
     position: fixed;
     bottom: 0;
     background-color: aquamarine;
+}*/
+
+div.absolute_square {
+    border: black solid;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    right: 0;
 }
 
