--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ div {
     padding: var(--padd);
 }
 
+.flex-container {
+    display: flex;
+    background-color: antiquewhite;
+}
 
 /* {
     /*background-image: linear-gradient(45deg, red, blue);*/
