--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ div {
 .flex-container {
     display: flex;
     background-color: antiquewhite;
-    flex-direction: column;
+    flex-direction: column-reverse;
 }
 
 /* {
