--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div {
     display: flex;
     background-color: antiquewhite;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
 }
 
 /* {
