feat: flex-shrink

--- a/style.css
+++ b/style.css
@@ -14,13 +14,27 @@ div {
 .flex-container {
     display: flex;
     background-color: antiquewhite;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
+}
+
+.flex-item1 {
+    flex-shrink:0;
+    border: 1px solid black;
+}
+
+.flex-item2 {
+    flex-grow: 10;
+    border: 1px solid black;
 }
 
 .flex-item3 {
     flex-grow: 10;
     border: 1px solid black;
 }
+
+
 
 /* {
     /*background-image: linear-gradient(45deg, red, blue);*/
