--- a/style.css
+++ b/style.css
@@ -60,6 +60,13 @@
     background-color: aliceblue;
 }
 
+.grid-item1 {
+    grid-area: 1 / 1 / 3 / 2;
+    background-color: aliceblue;
+}
+
+
+
 
 
 
