--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     align-self: flex-start;
 }*/
 
-.grid-container {
+/*.grid-container {
     display: grid;
     gap: 1em;
     grid-template-columns: auto auto auto;
@@ -63,20 +63,12 @@
 .grid-item1 {
     grid-area: 1 / 1 / 3 / 2;
     background-color: aliceblue;
+}*/
+
+.grid-template-container {
+    display: grid;
+    grid-template-areas: '1 2 3 4 5' '6 7 8 9 10';
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* {
