--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@
     box-sizing: border-box;
 }
 
+.fullSize {
+    height: 100%;
+    margin: 0;
+    border: 1px solid black;
+}
+
 /*div {
     padding: var(--padd);
 }*/
