--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-@media screen and (max-width: 768px) {
-    body {
-        background-color: blue;
-    }
-}
-
 :root {
     --red: rgb(255, 0, 0);
     --padd: 10px;
@@ -20,6 +14,54 @@
     height: 100%;
     margin: 0;
     border: 1px solid black;
+}
+
+.grid-template-container {
+    display: grid;
+    grid-template: 
+    'a b c d e' 40px
+    'f g h i j' 40px
+    'f g h i j' 40px / 1fr 1fr 1fr 1fr 1fr;
+}
+
+.template-item1 {
+    grid-area: a;
+}
+
+.template-item2 {
+    grid-area: b;
+}
+
+.template-item3 {
+    grid-area: c;
+}
+
+.template-item4 {
+    grid-area: d;
+}
+
+.template-item5 {
+    grid-area:e;
+}
+
+.template-item6 {
+    grid-area:f;
+}
+
+.template-item7 {
+    grid-area:g;
+}
+
+.template-item8 {
+    grid-area:h;
+}
+
+.template-item9 {
+    grid-area:i;
+}
+
+.template-item10 {
+    grid-area:j;
 }
 
 /*div {
@@ -77,10 +119,7 @@
     background-color: aliceblue;
 }*/
 
-.grid-template-container {
-    display: grid;
-    grid-template-areas: '1 2 3 4 5' '6 7 8 9 10';
-}
+
 
 
 /* {
@@ -290,3 +329,8 @@ div.three_columns #right {
     right: 0;
 }*/
 
+@media screen and (max-width: 768px) {
+    body {
+        background-color: blue;
+    }
+}
