--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+$link-size: 18px;
+$link-color: #ff0000;
 * {
     margin: 0;
     padding: 0;
@@ -23,14 +25,14 @@
 
             li {
                 display: inline-block;
-                font-size: 18px;
+                font-size: $link-size;
             }
 
             a {
                 text-decoration: none;
 
                 &:hover {
-                    color: #ff0000;
+                    color: $link-color;
                 }
             }
         }
