--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
+  padding-bottom: 100px;
 }
 .main-header .navbar {
   display: flex;
@@ -34,6 +36,27 @@
   background-color: #e7e7e7;
   border: 1px solid;
   border-color: #333333;
+}
+
+.wrapper {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper .container .card {
+  width: 400px;
+  height: 200px;
+  border: 1px solid black;
+  margin: 0 30px;
+}
+.wrapper .container .card:first-child {
+  width: 133.3333333333px;
 }
 
 /*# sourceMappingURL=style.css.map */
