--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $link-size: 18px;
 $link-color: #ff0000;
 $bg-color: #e7e7e7;
 $contact-border-color: #333333;
+$card-width: 400px;
 
 * {
     margin: 0;
@@ -14,6 +15,8 @@ $contact-border-color: #333333;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 100px;
 
 
     .navbar {
@@ -46,5 +49,26 @@ $contact-border-color: #333333;
     background-color: $bg-color;
     border: 1px solid;
     border-color: $contact-border-color;
+}
+
+.wrapper {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .card {
+            width: $card-width;
+            height: 200px;
+            border: 1px solid black;
+            margin: 0 30px;
+        }
+        .card:first-child {
+            width: calc($card-width / 3);
+        }
+    }
 }
                     
