--- a/style.css
+++ b/style.css
@@ -57,6 +57,4 @@
 }
 .wrapper .container .card:first-child {
   width: 133.3333333333px;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
