--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,18 @@
 $link-size: 18px;
 $card-width: 400px;
 $i_div: 0;
+//$colors: red, blue, yellow, green;
+$base-color: #098;
+$primary-color: #098;
+$secondary-color: #fff;
+$colors: (
+    primary : $primary-color,
+    secondary : $secondary-color,
+    third: black,
+    fourth: purple,
+    fifth: blue
+);
+
 
 * {
     margin: 0;
@@ -110,4 +122,36 @@ $i_div: 0;
 
 @function em($n, $base: 16px) {
     @return ($n / $base) * 1em;
+}
+
+.boxes {
+    display: flex;
+    gap: 20px;
+    div {
+        width: 150px;
+        height: 150px;
+        position: relative;
+    }
+
+    @for $i from 1 through 3 {
+        div:nth-child(#{$i}) {
+            background-color: lighten($base-color, $i * 5%); //vs darken()
+        }
+        div:nth-child(#{$i})::after {
+            content: "#{$i}";
+            position: absolute;
+            background-color: darken(blue, $i * 10%);
+            width: 50px;
+            height: 50px;
+            top: 0;
+            left: 0;
+            color: white;
+        }
+    }
+}
+
+@each $name, $color in $colors {
+    .button-#{$name} {
+        background-color: $color;
+    }
 }
