--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ $colors: (
     fourth: purple,
     fifth: blue
 );
+$noHover: true;
 
 
 * {
@@ -69,6 +70,7 @@ $colors: (
 
         &:hover {
             color: yellow;
+            
         }
     }
 }
@@ -152,6 +154,7 @@ $colors: (
 
 @each $name, $color in $colors {
     .button-#{$name} {
+
         background-color: $color;
     }
 }
